blog page added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
     />
   </head>
+  <head>
+    <div class="blog">
+      <a href="./blog.html">Blog</a>
+    </div>
+  </head>
   <body>
     <h1 class="title"><img src="./logo.png" /></h1>
     <div id="show-time">0 seconds</div>
