--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="display" class="inactive"></div>
 
       <div class="buttons">
-        <button id="start">START</button>
+        <button class="button" id="start">START</button>
       </div>
 
       <div class="divider-container">
