add style for blog button and blog page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <head>
     <div class="blog">
-      <a href="./blog.html">Blog</a>
+      <a class="button" href="./blog.html">Blog</a>
     </div>
   </head>
   <body>
