--- a/blog.html
+++ b/blog.html
@@ -7,5 +7,11 @@
     <title>Blog</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="blog">
+        <a class="button" href="./index.html">Back</a>
+      </div>
+    </header>
+  </body>
 </html>
