--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-    <link rel="stylesheet" href="styles.css" />
+    <style>
+      h1 {
+        text-align: center;
+        margin-bottom: 10px;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -13,5 +18,21 @@
         <a class="button" href="./index.html">Back</a>
       </div>
     </header>
+    <main>
+      <h1>Some Common Question and Answer</h1>
+      <ul>
+        <h3>Local Storage vs Session Storage</h3>
+        <li>Local Storage</li>
+        <ol>
+          <li>It can store data for long time.</li>
+          <li>
+            If browser is closed or tab are closed then that data still will be
+            there.
+          </li>
+          <li>It store data in key value pair.</li>
+        </ol>
+        <li>Session Storage</li>
+      </ul>
+    </main>
   </body>
 </html>
