--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,14 @@
           <li>It store data in key value pair.</li>
         </ol>
         <li>Session Storage</li>
+        <ol>
+          <li>It store data for short time.</li>
+          <li>
+            If browser is closed or tab are closed then data will remove from
+            there.
+          </li>
+          <li>It store data in key value pair.</li>
+        </ol>
       </ul>
     </main>
   </body>
