block vs global scope

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,30 @@
           <li>It store data in key value pair.</li>
         </ol>
       </ul>
+      <ul>
+        <h3>Global Scope vs Block Scope</h3>
+        <li>Block Scope</li>
+        <ol>
+          <li>
+            <code>let</code> <code>const</code> variable only have block scope.
+          </li>
+          <li>
+            Any variable declare with const or let in second bracket have block
+            scope. like if (true) { let x = 5 } in here x have block scope.
+          </li>
+          <li>Block scope variable cannot access from outside of the scope.</li>
+        </ol>
+        <li>Global Scope</li>
+        <ol>
+          <li>
+            A variable declared at the top of a program or outside of a function
+            is considered a global scope variable.
+          </li>
+          <li>
+            And Global Scope variable can be access from anywhere in the code.
+          </li>
+        </ol>
+      </ul>
     </main>
   </body>
 </html>
