How many way we can get undefined

--- a/blog.html
+++ b/blog.html
@@ -65,6 +65,17 @@
           </li>
         </ol>
       </ul>
+      <ul>
+        <h3>How many ways we can get undefined.</h3>
+        <ol>
+          <li>
+            When a function call expect a return value but that function doesn't
+            return any value.
+          </li>
+          <li>When a variable doesn't contain any value.</li>
+          <li>When we access a object property that doesn't exist.</li>
+        </ol>
+      </ul>
     </main>
   </body>
 </html>
