add btn style for blog

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,20 @@
     <style>
       h1 {
         text-align: center;
+      }
+      h3 {
         margin-bottom: 10px;
+        margin-top: 30px;
+      }
+      .button {
+        text-decoration: none;
+        padding: 10px 20px;
+        color: black;
+        border-radius: 10px;
+        background-color: dodgerblue;
+      }
+      .blog {
+        margin-top: 30px;
       }
     </style>
   </head>
