--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
     <style>
-      h1 {
-        text-align: center;
-      }
       h3 {
         margin-bottom: 10px;
         margin-top: 30px;
@@ -22,6 +19,10 @@
       }
       .blog {
         margin-top: 30px;
+      }
+      main {
+        max-width: 650px;
+        margin: 0 auto;
       }
     </style>
   </head>
@@ -88,6 +89,16 @@
           <li>When a variable doesn't contain any value.</li>
           <li>When we access a object property that doesn't exist.</li>
         </ol>
+      </ul>
+      <ul>
+        <h3>How Event Loop Work in JavaScript</h3>
+        <li>
+          The Event Loop has one simple job — to monitor the Call Stack and the
+          Callback Queue. If the Call Stack is empty, the Event Loop will take
+          the first event from the queue and will push it to the Call Stack,
+          which effectively runs it. Such an iteration is called a tick in the
+          Event Loop.
+        </li>
       </ul>
     </main>
   </body>
